--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,9 @@ social:
 
 # Analytics
 analytics:
-  provider: false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider: google-gtag # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id:
+    tracking_id: G-TZ05R4VRQW
     anonymize_ip: # true, false (default)
 
 # Site Author
