--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ locale: "en-US"
 title: "Arthur Degonde"
 title_separator: "-"
 subtitle: "Machine Learning Engineer"
-name: "Arthur degonde"
+name: "Arthur Degonde"
 description: "A landing page for my freelance Machine Learning activity."
-url: https://arthurd1.github.io
-baseurl: # the subpath of your site, e.g. "/blog"
+url: https://www.degonde-mlengineer.com/
+baseurl: ""
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -138,7 +138,6 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: https://github.com/arthurd1
-
 
 # Reading Files
 include:
