fix home footer and header
fix header

fix home page and footer

--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ footer:
   links:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin-in"
-      url: "https://www.linkedin.com/arthurdegonde"
+      url: "https://www.linkedin.com/in/arthurdegonde"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: https://github.com/arthurd1
