--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   name: "Arthur Degonde"
   avatar: "/assets/images/bio-photo.jpg"
   bio: "Machine Learning Engineer"
-  location: "Marseille, France"
+  location: "Paris, France"
   resume: /assets/files/cv.pdf
   linkedin: arthurdegonde
   github: arthurd1
